src/parser/query/grammar/.antlr/MDBParser.java
// Generated from /home/crojsd/MillenniumDB-Dev/src/parser/query/grammar/MDBParser.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MDBParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		K_ANY=1, K_AND=2, K_AVG=3, K_ALL=4, K_ASC=5, K_BY=6, K_BOOL=7, K_COUNT=8, 
		K_DESCRIBE=9, K_DESC=10, K_DISTINCT=11, K_IS=12, K_INTEGER=13, K_FALSE=14, 
		K_FLOAT=15, K_GROUP=16, K_LIMIT=17, K_MAX=18, K_MATCH=19, K_MIN=20, K_OPTIONAL=21, 
		K_ORDER=22, K_OR=23, K_NOT=24, K_NULL=25, K_SET=26, K_SUM=27, K_STRING=28, 
		K_RETURN=29, K_TRUE=30, K_WHERE=31, TRUE_PROP=32, FALSE_PROP=33, ANON_ID=34, 
		EDGE_ID=35, KEY=36, TYPE=37, TYPE_VAR=38, VARIABLE=39, STRING=40, UNSIGNED_INTEGER=41, 
		UNSIGNED_FLOAT=42, NAME=43, LEQ=44, GEQ=45, EQ=46, NEQ=47, LT=48, GT=49, 
		SINGLE_EQ=50, PATH_SEQUENCE=51, PATH_ALTERNATIVE=52, PATH_NEGATION=53, 
		STAR=54, PERCENT=55, QUESTION_MARK=56, PLUS=57, MINUS=58, L_PAR=59, R_PAR=60, 
		LCURLY_BRACKET=61, RCURLY_BRACKET=62, LSQUARE_BRACKET=63, RSQUARE_BRACKET=64, 
		COMMA=65, COLON=66, WHITE_SPACE=67, SINGLE_LINE_COMMENT=68, UNRECOGNIZED=69;
	public static final int
		RULE_root = 0, RULE_describeStatement = 1, RULE_setStatement = 2, RULE_matchStatement = 3, 
		RULE_whereStatement = 4, RULE_groupByStatement = 5, RULE_orderByStatement = 6, 
		RULE_returnStatement = 7, RULE_setItem = 8, RULE_returnItem = 9, RULE_aggregateFunc = 10, 
		RULE_orderByItem = 11, RULE_groupByItem = 12, RULE_graphPattern = 13, 
		RULE_optionalPattern = 14, RULE_basicPattern = 15, RULE_linearPattern = 16, 
		RULE_path = 17, RULE_pathAlternatives = 18, RULE_pathSequence = 19, RULE_pathAtom = 20, 
		RULE_pathSuffix = 21, RULE_pathType = 22, RULE_node = 23, RULE_fixedNode = 24, 
		RULE_fixedNodeInside = 25, RULE_edge = 26, RULE_edgeInside = 27, RULE_varNode = 28, 
		RULE_properties = 29, RULE_property = 30, RULE_identifier = 31, RULE_boolValue = 32, 
		RULE_numericValue = 33, RULE_value = 34, RULE_conditionalOrExpr = 35, 
		RULE_conditionalAndExpr = 36, RULE_comparisonExpr = 37, RULE_aditiveExpr = 38, 
		RULE_multiplicativeExpr = 39, RULE_unaryExpr = 40, RULE_atomicExpr = 41, 
		RULE_valueExpr = 42, RULE_exprTypename = 43, RULE_keyword = 44;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "describeStatement", "setStatement", "matchStatement", "whereStatement", 
			"groupByStatement", "orderByStatement", "returnStatement", "setItem", 
			"returnItem", "aggregateFunc", "orderByItem", "groupByItem", "graphPattern", 
			"optionalPattern", "basicPattern", "linearPattern", "path", "pathAlternatives", 
			"pathSequence", "pathAtom", "pathSuffix", "pathType", "node", "fixedNode", 
			"fixedNodeInside", "edge", "edgeInside", "varNode", "properties", "property", 
			"identifier", "boolValue", "numericValue", "value", "conditionalOrExpr", 
			"conditionalAndExpr", "comparisonExpr", "aditiveExpr", "multiplicativeExpr", 
			"unaryExpr", "atomicExpr", "valueExpr", "exprTypename", "keyword"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "'false'", null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "'true'", null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "'<='", "'>='", 
			"'=='", "'!='", "'<'", "'>'", "'='", "'/'", "'|'", "'^'", "'*'", "'%'", 
			"'?'", "'+'", "'-'", "'('", "')'", "'{'", "'}'", "'['", "']'", "','", 
			"':'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "K_ANY", "K_AND", "K_AVG", "K_ALL", "K_ASC", "K_BY", "K_BOOL", 
			"K_COUNT", "K_DESCRIBE", "K_DESC", "K_DISTINCT", "K_IS", "K_INTEGER", 
			"K_FALSE", "K_FLOAT", "K_GROUP", "K_LIMIT", "K_MAX", "K_MATCH", "K_MIN", 
			"K_OPTIONAL", "K_ORDER", "K_OR", "K_NOT", "K_NULL", "K_SET", "K_SUM", 
			"K_STRING", "K_RETURN", "K_TRUE", "K_WHERE", "TRUE_PROP", "FALSE_PROP", 
			"ANON_ID", "EDGE_ID", "KEY", "TYPE", "TYPE_VAR", "VARIABLE", "STRING", 
			"UNSIGNED_INTEGER", "UNSIGNED_FLOAT", "NAME", "LEQ", "GEQ", "EQ", "NEQ", 
			"LT", "GT", "SINGLE_EQ", "PATH_SEQUENCE", "PATH_ALTERNATIVE", "PATH_NEGATION", 
			"STAR", "PERCENT", "QUESTION_MARK", "PLUS", "MINUS", "L_PAR", "R_PAR", 
			"LCURLY_BRACKET", "RCURLY_BRACKET", "LSQUARE_BRACKET", "RSQUARE_BRACKET", 
			"COMMA", "COLON", "WHITE_SPACE", "SINGLE_LINE_COMMENT", "UNRECOGNIZED"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MDBParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MDBParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RootContext extends ParserRuleContext {
		public MatchStatementContext matchStatement() {
			return getRuleContext(MatchStatementContext.class,0);
		}
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public TerminalNode EOF() { return getToken(MDBParser.EOF, 0); }
		public SetStatementContext setStatement() {
			return getRuleContext(SetStatementContext.class,0);
		}
		public WhereStatementContext whereStatement() {
			return getRuleContext(WhereStatementContext.class,0);
		}
		public GroupByStatementContext groupByStatement() {
			return getRuleContext(GroupByStatementContext.class,0);
		}
		public OrderByStatementContext orderByStatement() {
			return getRuleContext(OrderByStatementContext.class,0);
		}
		public DescribeStatementContext describeStatement() {
			return getRuleContext(DescribeStatementContext.class,0);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			setState(109);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case K_MATCH:
			case K_SET:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==K_SET) {
					{
					setState(90);
					setStatement();
					}
				}

				setState(93);
				matchStatement();
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==K_WHERE) {
					{
					setState(94);
					whereStatement();
					}
				}

				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==K_GROUP) {
					{
					setState(97);
					groupByStatement();
					}
				}

				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==K_ORDER) {
					{
					setState(100);
					orderByStatement();
					}
				}

				setState(103);
				returnStatement();
				setState(104);
				match(EOF);
				}
				break;
			case K_DESCRIBE:
				enterOuterAlt(_localctx, 2);
				{
				setState(106);
				describeStatement();
				setState(107);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DescribeStatementContext extends ParserRuleContext {
		public TerminalNode K_DESCRIBE() { return getToken(MDBParser.K_DESCRIBE, 0); }
		public FixedNodeInsideContext fixedNodeInside() {
			return getRuleContext(FixedNodeInsideContext.class,0);
		}
		public DescribeStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_describeStatement; }
	}

	public final DescribeStatementContext describeStatement() throws RecognitionException {
		DescribeStatementContext _localctx = new DescribeStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_describeStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(K_DESCRIBE);
			setState(112);
			fixedNodeInside();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetStatementContext extends ParserRuleContext {
		public TerminalNode K_SET() { return getToken(MDBParser.K_SET, 0); }
		public List<SetItemContext> setItem() {
			return getRuleContexts(SetItemContext.class);
		}
		public SetItemContext setItem(int i) {
			return getRuleContext(SetItemContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MDBParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MDBParser.COMMA, i);
		}
		public SetStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setStatement; }
	}

	public final SetStatementContext setStatement() throws RecognitionException {
		SetStatementContext _localctx = new SetStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_setStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(K_SET);
			setState(115);
			setItem();
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(116);
				match(COMMA);
				setState(117);
				setItem();
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MatchStatementContext extends ParserRuleContext {
		public TerminalNode K_MATCH() { return getToken(MDBParser.K_MATCH, 0); }
		public GraphPatternContext graphPattern() {
			return getRuleContext(GraphPatternContext.class,0);
		}
		public MatchStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_matchStatement; }
	}

	public final MatchStatementContext matchStatement() throws RecognitionException {
		MatchStatementContext _localctx = new MatchStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_matchStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(K_MATCH);
			setState(124);
			graphPattern();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhereStatementContext extends ParserRuleContext {
		public TerminalNode K_WHERE() { return getToken(MDBParser.K_WHERE, 0); }
		public ConditionalOrExprContext conditionalOrExpr() {
			return getRuleContext(ConditionalOrExprContext.class,0);
		}
		public WhereStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whereStatement; }
	}

	public final WhereStatementContext whereStatement() throws RecognitionException {
		WhereStatementContext _localctx = new WhereStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_whereStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(K_WHERE);
			setState(127);
			conditionalOrExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GroupByStatementContext extends ParserRuleContext {
		public TerminalNode K_GROUP() { return getToken(MDBParser.K_GROUP, 0); }
		public TerminalNode K_BY() { return getToken(MDBParser.K_BY, 0); }
		public List<GroupByItemContext> groupByItem() {
			return getRuleContexts(GroupByItemContext.class);
		}
		public GroupByItemContext groupByItem(int i) {
			return getRuleContext(GroupByItemContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MDBParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MDBParser.COMMA, i);
		}
		public GroupByStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_groupByStatement; }
	}

	public final GroupByStatementContext groupByStatement() throws RecognitionException {
		GroupByStatementContext _localctx = new GroupByStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_groupByStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(K_GROUP);
			setState(130);
			match(K_BY);
			setState(131);
			groupByItem();
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(132);
				match(COMMA);
				setState(133);
				groupByItem();
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrderByStatementContext extends ParserRuleContext {
		public TerminalNode K_ORDER() { return getToken(MDBParser.K_ORDER, 0); }
		public TerminalNode K_BY() { return getToken(MDBParser.K_BY, 0); }
		public List<OrderByItemContext> orderByItem() {
			return getRuleContexts(OrderByItemContext.class);
		}
		public OrderByItemContext orderByItem(int i) {
			return getRuleContext(OrderByItemContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MDBParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MDBParser.COMMA, i);
		}
		public OrderByStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_orderByStatement; }
	}

	public final OrderByStatementContext orderByStatement() throws RecognitionException {
		OrderByStatementContext _localctx = new OrderByStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_orderByStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(K_ORDER);
			setState(140);
			match(K_BY);
			setState(141);
			orderByItem();
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(142);
				match(COMMA);
				setState(143);
				orderByItem();
				}
				}
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnStatementContext extends ParserRuleContext {
		public ReturnStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnStatement; }
	 
		public ReturnStatementContext() { }
		public void copyFrom(ReturnStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ReturnAllContext extends ReturnStatementContext {
		public TerminalNode K_RETURN() { return getToken(MDBParser.K_RETURN, 0); }
		public TerminalNode STAR() { return getToken(MDBParser.STAR, 0); }
		public TerminalNode K_DISTINCT() { return getToken(MDBParser.K_DISTINCT, 0); }
		public TerminalNode K_LIMIT() { return getToken(MDBParser.K_LIMIT, 0); }
		public TerminalNode UNSIGNED_INTEGER() { return getToken(MDBParser.UNSIGNED_INTEGER, 0); }
		public ReturnAllContext(ReturnStatementContext ctx) { copyFrom(ctx); }
	}
	public static class ReturnListContext extends ReturnStatementContext {
		public TerminalNode K_RETURN() { return getToken(MDBParser.K_RETURN, 0); }
		public List<ReturnItemContext> returnItem() {
			return getRuleContexts(ReturnItemContext.class);
		}
		public ReturnItemContext returnItem(int i) {
			return getRuleContext(ReturnItemContext.class,i);
		}
		public TerminalNode K_DISTINCT() { return getToken(MDBParser.K_DISTINCT, 0); }
		public List<TerminalNode> COMMA() { return getTokens(MDBParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MDBParser.COMMA, i);
		}
		public TerminalNode K_LIMIT() { return getToken(MDBParser.K_LIMIT, 0); }
		public TerminalNode UNSIGNED_INTEGER() { return getToken(MDBParser.UNSIGNED_INTEGER, 0); }
		public ReturnListContext(ReturnStatementContext ctx) { copyFrom(ctx); }
	}

	public final ReturnStatementContext returnStatement() throws RecognitionException {
		ReturnStatementContext _localctx = new ReturnStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_returnStatement);
		int _la;
		try {
			setState(174);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				_localctx = new ReturnListContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(149);
				match(K_RETURN);
				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==K_DISTINCT) {
					{
					setState(150);
					match(K_DISTINCT);
					}
				}

				setState(153);
				returnItem();
				setState(158);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(154);
					match(COMMA);
					setState(155);
					returnItem();
					}
					}
					setState(160);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==K_LIMIT) {
					{
					setState(161);
					match(K_LIMIT);
					setState(162);
					match(UNSIGNED_INTEGER);
					}
				}

				}
				break;
			case 2:
				_localctx = new ReturnAllContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(165);
				match(K_RETURN);
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==K_DISTINCT) {
					{
					setState(166);
					match(K_DISTINCT);
					}
				}

				setState(169);
				match(STAR);
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==K_LIMIT) {
					{
					setState(170);
					match(K_LIMIT);
					setState(171);
					match(UNSIGNED_INTEGER);
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetItemContext extends ParserRuleContext {
		public TerminalNode VARIABLE() { return getToken(MDBParser.VARIABLE, 0); }
		public TerminalNode SINGLE_EQ() { return getToken(MDBParser.SINGLE_EQ, 0); }
		public FixedNodeInsideContext fixedNodeInside() {
			return getRuleContext(FixedNodeInsideContext.class,0);
		}
		public SetItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setItem; }
	}

	public final SetItemContext setItem() throws RecognitionException {
		SetItemContext _localctx = new SetItemContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_setItem);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(VARIABLE);
			setState(177);
			match(SINGLE_EQ);
			setState(178);
			fixedNodeInside();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnItemContext extends ParserRuleContext {
		public ReturnItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnItem; }
	 
		public ReturnItemContext() { }
		public void copyFrom(ReturnItemContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ReturnItemVarContext extends ReturnItemContext {
		public TerminalNode VARIABLE() { return getToken(MDBParser.VARIABLE, 0); }
		public TerminalNode KEY() { return getToken(MDBParser.KEY, 0); }
		public ReturnItemVarContext(ReturnItemContext ctx) { copyFrom(ctx); }
	}
	public static class ReturnItemAggContext extends ReturnItemContext {
		public AggregateFuncContext aggregateFunc() {
			return getRuleContext(AggregateFuncContext.class,0);
		}
		public TerminalNode L_PAR() { return getToken(MDBParser.L_PAR, 0); }
		public TerminalNode VARIABLE() { return getToken(MDBParser.VARIABLE, 0); }
		public TerminalNode R_PAR() { return getToken(MDBParser.R_PAR, 0); }
		public TerminalNode KEY() { return getToken(MDBParser.KEY, 0); }
		public ReturnItemAggContext(ReturnItemContext ctx) { copyFrom(ctx); }
	}
	public static class ReturnItemCountContext extends ReturnItemContext {
		public TerminalNode K_COUNT() { return getToken(MDBParser.K_COUNT, 0); }
		public TerminalNode L_PAR() { return getToken(MDBParser.L_PAR, 0); }
		public TerminalNode R_PAR() { return getToken(MDBParser.R_PAR, 0); }
		public TerminalNode VARIABLE() { return getToken(MDBParser.VARIABLE, 0); }
		public TerminalNode STAR() { return getToken(MDBParser.STAR, 0); }
		public TerminalNode K_DISTINCT() { return getToken(MDBParser.K_DISTINCT, 0); }
		public TerminalNode KEY() { return getToken(MDBParser.KEY, 0); }
		public ReturnItemCountContext(ReturnItemContext ctx) { copyFrom(ctx); }
	}

	public final ReturnItemContext returnItem() throws RecognitionException {
		ReturnItemContext _localctx = new ReturnItemContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_returnItem);
		int _la;
		try {
			setState(205);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VARIABLE:
				_localctx = new ReturnItemVarContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(180);
				match(VARIABLE);
				setState(182);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==KEY) {
					{
					setState(181);
					match(KEY);
					}
				}

				}
				break;
			case K_AVG:
			case K_MAX:
			case K_MIN:
			case K_SUM:
				_localctx = new ReturnItemAggContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(184);
				aggregateFunc();
				setState(185);
				match(L_PAR);
				setState(186);
				match(VARIABLE);
				setState(188);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==KEY) {
					{
					setState(187);
					match(KEY);
					}
				}

				setState(190);
				match(R_PAR);
				}
				break;
			case K_COUNT:
				_localctx = new ReturnItemCountContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(192);
				match(K_COUNT);
				setState(193);
				match(L_PAR);
				setState(195);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==K_DISTINCT) {
					{
					setState(194);
					match(K_DISTINCT);
					}
				}

				setState(202);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case VARIABLE:
					{
					setState(197);
					match(VARIABLE);
					setState(199);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==KEY) {
						{
						setState(198);
						match(KEY);
						}
					}

					}
					break;
				case STAR:
					{
					setState(201);
					match(STAR);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(204);
				match(R_PAR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AggregateFuncContext extends ParserRuleContext {
		public TerminalNode K_SUM() { return getToken(MDBParser.K_SUM, 0); }
		public TerminalNode K_MAX() { return getToken(MDBParser.K_MAX, 0); }
		public TerminalNode K_MIN() { return getToken(MDBParser.K_MIN, 0); }
		public TerminalNode K_AVG() { return getToken(MDBParser.K_AVG, 0); }
		public AggregateFuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aggregateFunc; }
	}
